# routes/api.php
@@ -42,7 +42,7 @@ use Illuminate\Support\Facades\Route;
           Route::post('alluser', 'Api\V1\UserController@alluser');
           Route::post('getDetails', 'Api\V1\UserController@getDetails');
           Route::post('verifyId/{id}', 'Api\V1\UserController@verifyId');
-          Route::post('varifyemail/{id}', 'Api\V1\UserController@varifyemail');
+          Route::post('verifyemail/{id}', 'Api\V1\UserController@verifyemail');
           Route::post('updateProfile/{id}', 'Api\V1\UserController@updateProfile');
           Route::post('deleteUser/{id}', 'Api\V1\UserController@deleteUser');
           Route::post('addPaymentDetails/{id}', 'Api\V1\UserController@addPaymentDetails');
